tests/unit/default/syntax-error/082-add-pk-table.e.t
---- IN ----
+PK%table
---- OUT ----
---- ERR ----
syntax: expected <columns-ref> after `+PK%table` instead of EOL at position 9 - at line 1
---- EXIT ----
1
